# Comformer_uv

./: .gitignore  README.md  TEST_README.md  TRAINING_EXPERIMENTS_SUMMARY.md  Z_SYMMETRY_BREAKING_DOCUMENTATION.md  compare_zsymbreak.py  pyproject.toml  setup.py  setup_extra.txt  test_WF_target.py  test_caching_gpu.sh  test_caching_slurm.sh  test_caching_training.py  test_cuda.py  test_graph_caching.py  test_zsymbreak.py
bash_training_scripts/: test_WF.sh  train_WF_BOTTOM_SE3_AUG.sh  train_WF_TOP_SE3_AUG.sh  train_cleavage_Se3.sh  train_d2r2.sh  train_d2r2_WF.sh  train_d2r2_WF_zsymbreak.sh  train_d2r2_single_prop.sh  train_d2r2_single_prop_WF_BOTTOM.sh  train_d2r2_single_prop_WF_TOP.sh  train_d2r2_single_prop_cleavage_energy.sh
bash_training_scripts/robinlabscripts/: gpu_utils.sh  run_eComformer_WF_elemental_no_zsym.sh  run_eComformer_WF_elemental_zsym.sh  run_eComformer_WF_elemental_zsym_cartesian.sh  run_eComformer_WF_pt_group.sh  run_eComformer_WF_pt_group_zsym_cartesian.sh  run_eComformer_WF_space_group_no_zsym.sh  run_eComformer_WF_space_group_zsym.sh  run_eComformer_WF_space_group_zsym_cartesian.sh  run_eComformer_WF_structureid_no_zsym.sh  run_eComformer_WF_structureid_zsym.sh  run_eComformer_WF_structureid_zsym_cartesian.sh  run_eComformer_cleavage_energy_elemental_no_zsym.sh  run_eComformer_cleavage_energy_elemental_zsym.sh  run_eComformer_cleavage_energy_elemental_zsym_cartesian.sh  run_eComformer_cleavage_energy_pt_group.sh  run_eComformer_cleavage_energy_pt_group_zsym_cartesian.sh  run_eComformer_cleavage_energy_space_group_no_zsym.sh  run_eComformer_cleavage_energy_space_group_zsym.sh  run_iComformer_WF_elemental.sh  (+25 more)
comformer/: config.py  data.py  graph_cache.py  graphs.py  train.py  train_props.py
notebooks/: POSCAR-JVASP-90856.vasp  combine_df.ipynb  data_aug.ipynb  data_aug_peter.ipynb  data_aug_simple.ipynb  id_prop.csv  prediction_generator.ipynb  result_analysis.ipynb  result_generator.ipynb  transform.ipynb  tutorial.ipynb
(+81 files in other folders)
