[project]
name = "comformer-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.19.5, <2",
    "scipy>=1.6.1",
    "jarvis-tools>=2021.07.19",
    "torch==2.0.1",
    "torchvision",
    "torchaudio",
    "scikit-learn>=0.22.2",
    "matplotlib>=3.4.1",
    "tqdm>=4.60.0",
    "pandas>=1.2.3",
    "pytorch-ignite>=0.4.7",
    "pydantic>=1.8.1,<2",
    "pyparsing>=2.2.1,<3",
    "pandarallel>=1.6.5",
    "torch-geometric",
    "e3nn>=0.5.4",
    "nvitop>=1.4.2",
    "pymatgen>=2025.1.24",
    "ipywidgets>=8.1.5",
    "pyarrow>=19.0.0",
    "ipykernel>=6.29.5",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.3",
    "torch-spline-conv>=1.2.2",
    "structlog>=25.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.0.1+cu117.html"
explicit = true

[project.optional-dependencies]
dev = [
    "flake8>=3.9.1",
    "pycodestyle>=2.7.0",
    "pydocstyle>=6.0.0",
]
